<?xml version="1.0"?>
<package format="3">
  <name>px4_vio_bridge</name>
  <version>0.1.0</version>
  <description>Bridge OAK-D Lite Basalt VIO poses into PX4 visual odometry over uXRCE-DDS.</description>
  <maintainer email="john@example.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
